--- a/app/src/main/res/layout/activity_timer_menu.xml
+++ b/app/src/main/res/layout/activity_timer_menu.xml
@@ -23,13 +23,13 @@
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="1.0" />
+        app:layout_constraintVertical_bias="0.675" />
 
     <TextView
         android:id="@+id/timeTxtView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="00::00::00"
+        android:text="00::00"
         android:textSize="30sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -50,7 +50,7 @@
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.781" />
+        app:layout_constraintVertical_bias="0.702" />
 
     <Button
         android:id="@+id/btnResetTimer"
