--- a/app/src/main/res/layout/activity_create_cards.xml
+++ b/app/src/main/res/layout/activity_create_cards.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".Tools.MemoryCards.CreateCards">
+    tools:context=".Tools.MemoryCards.CreateDeck">
 
     <EditText
         android:id="@+id/titleText"
@@ -16,7 +16,7 @@
         android:layout_marginRight="32dp"
         android:ems="10"
         android:gravity="center"
-        android:hint="@string/deckTitle"
+        android:hint="@string/deckTitleHint"
         android:inputType="textPersonName"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -33,7 +33,7 @@
         android:layout_marginEnd="32dp"
         android:ems="10"
         android:gravity="center"
-        android:hint="@string/deckSubject"
+        android:hint="@string/deckSubjectHint"
         android:inputType="textPersonName"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
