--- a/app/src/main/res/layout/activity_study_tips.xml
+++ b/app/src/main/res/layout/activity_study_tips.xml
@@ -7,11 +7,34 @@
     tools:context=".Tools.StudyTips.StudyTips">
 
     <TextView
-        android:id="@+id/textView7"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="STUDY TIPS"
+        android:id="@+id/txtViewStudyTips"
+        android:layout_width="350dp"
+        android:layout_height="219dp"
+        android:background="#4D5656"
+        android:gravity="center"
+        android:shadowColor="#FFFFFF"
+        android:text="Press the button and your mindset will change."
         android:textAppearance="@style/TextAppearance.AppCompat.Display3"
-        tools:layout_editor_absoluteX="53dp"
-        tools:layout_editor_absoluteY="328dp" />
+        android:textColor="#E5E8E8"
+        android:textSize="18sp"
+        android:textStyle="bold|italic"
+        android:visibility="visible"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.491"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.314" />
+
+    <Button
+        android:id="@+id/btnTip"
+        android:layout_width="200dp"
+        android:layout_height="wrap_content"
+        android:text="Tip Generator"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.498"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.762" />
 </androidx.constraintlayout.widget.ConstraintLayout>
