--- a/app/src/main/res/layout/activity_my_cards.xml
+++ b/app/src/main/res/layout/activity_my_cards.xml
@@ -12,17 +12,15 @@
         android:layout_height="281dp"
         android:layout_marginStart="-2000dp"
         android:layout_marginLeft="-2000dp"
-        android:layout_marginTop="258dp"
         android:layout_marginEnd="14dp"
         android:layout_marginRight="14dp"
-        android:layout_marginBottom="192dp"
         android:onClick="flip"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.999"
+        app:layout_constraintHorizontal_bias="1.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="1.0"
+        app:layout_constraintVertical_bias="0.06"
         app:srcCompat="@drawable/blank" />
 
     <Button
@@ -33,8 +31,10 @@
         android:text="NEW CARD"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.498"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/cardImage" />
+        app:layout_constraintTop_toBottomOf="@+id/cardImage"
+        app:layout_constraintVertical_bias="0.716" />
 
     <TextView
         android:id="@+id/cardText"
@@ -61,5 +61,46 @@
         app:layout_constraintEnd_toEndOf="@+id/cardImage"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="@+id/cardImage" />
+
+    <LinearLayout
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="1dp"
+        android:layout_marginLeft="32dp"
+        android:layout_marginTop="1dp"
+        android:layout_marginEnd="1dp"
+        android:layout_marginRight="32dp"
+        android:layout_marginBottom="1dp"
+        android:clipChildren="false"
+        android:orientation="horizontal"
+        app:layout_constraintBottom_toTopOf="@+id/cardButton"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.496"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/cardImage"
+        app:layout_constraintVertical_bias="0.0">
+
+        <ImageButton
+            android:id="@+id/wrongButton"
+            android:layout_width="64dp"
+            android:layout_height="64dp"
+            android:layout_marginLeft="32dp"
+            android:layout_marginRight="64dp"
+            android:layout_weight="1"
+            android:onClick="wrongClick"
+            app:srcCompat="@android:drawable/ic_delete" />
+
+        <ImageButton
+            android:id="@+id/correctButton"
+            style="@style/Widget.AppCompat.ImageButton"
+            android:layout_width="64dp"
+            android:layout_height="64dp"
+            android:layout_marginLeft="64dp"
+            android:layout_marginRight="32dp"
+            android:layout_weight="1"
+            android:onClick="correctClick"
+            app:srcCompat="@drawable/check" />
+
+    </LinearLayout>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
