--- a/app/src/main/res/layout/activity_my_cards.xml
+++ b/app/src/main/res/layout/activity_my_cards.xml
@@ -63,13 +63,12 @@
         app:layout_constraintTop_toTopOf="@+id/cardImage" />
 
     <LinearLayout
+        android:id="@+id/linearLayout"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="1dp"
-        android:layout_marginLeft="32dp"
         android:layout_marginTop="1dp"
         android:layout_marginEnd="1dp"
-        android:layout_marginRight="32dp"
         android:layout_marginBottom="1dp"
         android:clipChildren="false"
         android:orientation="horizontal"
@@ -102,5 +101,15 @@
             app:srcCompat="@drawable/check" />
 
     </LinearLayout>
+
+    <TextView
+        android:id="@+id/resultText"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="TextView"
+        app:layout_constraintBottom_toTopOf="@+id/cardButton"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/linearLayout" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
